--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,7 @@ jobs:
 
       - name: Run tests
         run: bundle exec rake
+        if: matrix.ruby != 'jruby' && matrix.ruby != 'jruby-head'
+      - name: Run tests (jruby)
+        run: bundle exec rake -- -X+O
+        if: matrix.ruby == 'jruby' || matrix.ruby == 'jruby-head'
